feat: add entity framework

--- a/CongestionTaxCalculator/appsettings.json
+++ b/CongestionTaxCalculator/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Main": "Data Source=c:\\databse.db;Version=3;"
+    "Main": "Data Source=databse.db;"
   }
 }
